Fix horizontal scrolling in block code

--- a/assets/skeleton.css
+++ b/assets/skeleton.css
@@ -311,11 +311,23 @@ code {
   white-space: nowrap;
   background: #F1F1F1;
   border: 1px solid #E1E1E1;
-  border-radius: 4px; }
+  border-radius: 4px;
+}
+pre {
+  background: #F1F1F1;
+  border: 1px solid #E1E1E1;
+  border-radius: 4px;
+  padding: 1rem 1.5rem;
+}
 pre > code {
   display: block;
-  padding: 1rem 1.5rem;
-  white-space: pre; }
+  white-space: pre;
+  border: 0;
+  border-radius: 0;
+  background: 0;
+  padding: 0;
+  margin: 0;
+}
 
 
 /* Tables
